# nikoquestions

./: .gitignore  Cargo.toml  README.md  config.example.toml  package.json
.sqlx/: query-2421a63f1298bcf5150b68f88cc63cd9f0b49c33606ec4c14ae7515589693b77.json  query-5700e2a53259dc24a91171543a6197d93ed40d3b13fc0ecc1fca854f6f2ee2eb.json  query-59b27758bc3c4c1e4080746bbab5d8b177a58056a574fe1c4a969d8ae748c9b5.json  query-59fe6531b8fb3b52a165ec7fe16a0f2753ca2cabca9425f4e924c472e9996639.json  query-6030f16176373fc37470b38a6aa1faff5769a747de520ab4ff29a15a07d79386.json  query-77be721d3a62603156ecbdb0c841529b9d71aac60332965781dc861859ddd0d2.json  query-9263660bed78e0235e11766e73e0f69bc95a7317ad038e27b97fd9b943cac752.json  query-9370f85a174082149b11a497695849eb442c774be36a92eaae427dce3574f114.json  query-9818b36eeb48a85a7989ca96c0ae83a831dc4c2d1600cdf02e8f7c07bc1ac060.json  query-a23c3648497b6093974a2488be819ff7a99fc9d59c109594896ddecb19204192.json  query-baa3e33bda382011064310aa59da6c6c4c547de0fb6ae500274d2a294f28deac.json  query-fbb87768df7fd8fd31a2d91eb8c7eaba61c2ba7d1e189eccf2ad97ba8710ea05.json
assets/: dates.js  style.css
migrations/: 20241202232717_question_table.sql
src/: main.rs
templates/: answer.jinja  auth.jinja  base.jinja  index.jinja  macros.jinja  style.css
