[package]
name = "nikoquestions"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["form", "http1", "http2", "query", "tokio"], default-features = false }
axum-extra = { version = "0.9", features = ["cookie"] }
blake3 = "1"
bytes = "1"
dashmap = "6"
mime_guess = "2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["migrate", "macros", "sqlite", "runtime-tokio"] }
tera = { version = "1", features = ["preserve_order", "builtins"], default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
toml = "0.8"
tower-sombrero = { version = "0.0.5", features = ["axum"] }
vss = "0.1"
